[gd_scene load_steps=12 format=3 uid="uid://ct1ad334dh1v0"]

[ext_resource type="Script" path="res://ui/gameplay/Input.gd" id="1_h8nyc"]
[ext_resource type="Theme" uid="uid://bfguccbp6w6t1" path="res://ui/mtheme.tres" id="1_tqs2e"]
[ext_resource type="Script" path="res://main.gd" id="1_yn0ej"]
[ext_resource type="Script" path="res://ui/gameplay/ScrollContainer.gd" id="3_42v4t"]
[ext_resource type="Script" path="res://GameLogic.gd" id="3_vorft"]
[ext_resource type="Script" path="res://RoomControl.gd" id="4_24r7d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0anyl"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7sqhp"]
bg_color = Color(0.164706, 0.164706, 0.164706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ovgp"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hrrf0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fdg21"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tqs2e")
script = ExtResource("1_yn0ej")
maxHistoryLength = 50

[node name="GameLogic" type="Node" parent="."]
script = ExtResource("3_vorft")

[node name="RoomControl" type="Node" parent="."]
script = ExtResource("4_24r7d")

[node name="Areas" type="Node" parent="RoomControl"]

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0anyl")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7sqhp")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Panel"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Panel/MarginContainer"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0
script = ExtResource("3_42v4t")

[node name="History" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Panel/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="InputContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme_override_styles/panel = SubResource("StyleBoxFlat_0ovgp")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/InputContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/InputContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = ":"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Input" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/InputContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_hrrf0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fdg21")
caret_blink = true
caret_force_displayed = true
script = ExtResource("1_h8nyc")

[connection signal="text_submitted" from="PanelContainer/MarginContainer/VBoxContainer/InputContainer/HBoxContainer/Input" to="." method="ProcessPlayerInput"]
[connection signal="text_submitted" from="PanelContainer/MarginContainer/VBoxContainer/InputContainer/HBoxContainer/Input" to="PanelContainer/MarginContainer/VBoxContainer/InputContainer/HBoxContainer/Input" method="ClearInput"]
